chore: 初始化專案結構與自動化流程 (v0.0.1)

--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -26,6 +26,8 @@ jobs:
           channel: 'stable'
       - name: 獲取依賴
         run: flutter pub get
+      - name: 靜態分析
+        run: flutter analyze
       - name: 更新版本
         uses: javierdwd/flutter-version@v1
         with:
