--- a/.github/workflows/flutter_test.yml
+++ b/.github/workflows/flutter_test.yml
@@ -22,4 +22,15 @@ jobs:
       - name: 分析代碼
         run: flutter analyze
       - name: 運行測試
-        run: flutter test
+        run: flutter test --coverage
+      - name: 上傳 coverage 報告
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage/lcov.info
+      - name: 上傳覆蓋率到 Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: coverage/lcov.info
+          flags: unittests
+          fail_ci_if_error: true
