--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,7 @@
     {
       "source": "functions",
       "codebase": "default",
+      "region": "us-central1",
       "ignore": [
         "node_modules",
         ".git",
